# openfox

./: .gitignore  Dockerfile  README-zh_CN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
openfox/: __init__.py  __main__.py  agent.py
openfox/channels/: base.py  feishu.py  wxclaw.py
openfox/cli/: commands.py
openfox/core/: agent.py  knowledge.py  lifespan.py  skills.py  tools.py
openfox/db/: agno_mongo.py
openfox/interfaces/: feishu.py  router.py  security.py
openfox/modes/: config.py
openfox/notifys/: feishu.py
openfox/routers/: config.py  skills.py  version.py
openfox/schemas/: config.py  skill.py
openfox/services/: __init__.py  skills.py
openfox/skills/stock/: SKILL.md
openfox/skills/summarize/: SKILL.md
openfox/static/web/: index.html
openfox/static/web/assets/: Alert-8_rggHEV.js  Alert-Dbj4aEaL.js  Alert-Wgwy0HFL.js  AppPageScaffold-7hJoZCbM.js  AppPageScaffold-B9oHAWQY.js  AppPageScaffold-BrWXRnXJ.js  AppPageScaffold-DHyARg0W.js  AppPageScaffold-h_Sgne5x.js  Badge-5IZLWLEk.js  Badge-BybQ6lDY.js  Badge-DNEyWVfw.js  Button-8syKlqsn.js  Button-BNCEBqDe.js  Button-CRb2fhgV.js  Card-Ch_55uzv.js  Card-D1Dtth9X.js  Card-DAsjpte4.js  CardContent-B9hPwS3Q.js  CardContent-DZmTlDc5.js  Checkbox-30JKo_N7.js  Checkbox-BJKtI6YA.js  (+402 more)
openfox/tools/: akshare_stock.py  browser.py  config.py  feishu.py  mcp_config.py  scheduler.py  shell.py  wxclaw.py
openfox/utils/: agent.py  chrome.py  const.py  knowledge.py  mcps.py  notify.py  schedule_notice.py  serving.py  skills.py  web_static.py
script/: build_web.py
web/: .gitignore  auto-imports.d.ts  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  typed-router.d.ts  vite.config.ts
web/src/: App.vue  main.ts  router.ts  style.css  vue-router-meta.d.ts
web/src/api/: evals.ts  knowledge.ts  memory.ts  os.ts  routes.ts  schedules.ts  traces.ts
web/src/assets/: knowledge_config.json
web/src/components/: AppHeader.vue  AppPageScaffold.vue  AppSidebar.vue  ChatToolCallsCard.vue  ChatToolOutputTags.vue
web/src/composables/: agentSessionChat.ts  chatViewModel.ts  request.ts  store.ts  typewriterReply.ts
web/src/i18n/: index.ts
web/src/layouts/: default.vue
web/src/pages/: login.vue
web/src/types/: chat.ts  os.ts  schedules.ts
(+20 files in other folders)
