[project]
name = "openfox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno[scheduler]>=2.5.9",
    "aiosqlite>=0.22.1",
    "asyncer>=0.0.17",
    "fastapi[standard]>=0.135.1",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "json-repair>=0.58.5",
    "lark-oapi>=1.5.3",
    "litellm>=1.82.6",
    "mcp>=1.26.0",
    "playwright>=1.58.0",
    "sqlalchemy>=2.0.48",
    "typer>=0.24.1",
    "websockets>=12",
]
